--- a/sim/.gitignore
+++ b/sim/.gitignore
@@ -3,6 +3,7 @@
 # Get latest from https://github.com/github/gitignore/blob/master/Unity.gitignore
 #
 [Vv]env/
+[Ee]nvs/
 [Ll]ibrary/
 [Tt]emp/
 [Oo]bj/
